[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torado"
version = "0.0.2"
authors = [
  { name="Jok3r", email="invalid32@protonmail.com" },
]
description = "Routes your traffic through TOR Network"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/th3knv/Torado"
"Bug Tracker" = "https://github.com/th3knv/Torado/issues"
